Adding enum validators for request params.